Fix modal size on mobile v2

--- a/src/react-components/room/WebPageUrlModal.scss
+++ b/src/react-components/room/WebPageUrlModal.scss
@@ -3,7 +3,7 @@
 
 :local(.iframe) {
   width: 85vw;
-  @media (width: 992px) {
+  @media (max-width: 992px) {
     width: 100vw;
     height: 100vh;
   }
